fix: syc scrollbar position between contents and editor

--- a/html/css/markdown-contents.css
+++ b/html/css/markdown-contents.css
@@ -19,6 +19,10 @@ body
   padding: 2px;
 
   word-wrap: break-word;
+
+  overflow-x: hidden;
+  overflow-y: scroll;
+
 }
 
 /* Custom scroll bar */
