--- a/html/css/markdown-editor.css
+++ b/html/css/markdown-editor.css
@@ -21,6 +21,9 @@ body > #card > #editor > .milkdown{
   margin: 0px;
   width: 100%;
   height: 100%;
+
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 body > #card > #editor > .milkdown > .editor {
@@ -38,9 +41,11 @@ body > #card > #editor > .milkdown > .editor {
   padding: 2px;
 
   word-wrap: break-word;
+}
 
-  width: 100%;
-  height: 100%;
+/* Custom scroll bar */
+.milkdown::-webkit-scrollbar-thumb{
+  border-radius: 7px;
 }
 
 body > #card > #editor > .milkdown > .editor > * {
